@@ -7,3 +7,4 @@ obj-y += panic.o
 obj-y += sched.o
 obj-y += cpu.o
 obj-y += smp.o
+obj-y += resource.o
