@@ -540,3 +540,8 @@ Mon Feb 22 11:04:52 CST 2016
 - [+] arch/x86/include/asm/switch_to.h
 - [M] arch/x86/kernel/process_32.c
 - [M] arch/x86/kernel/process_64.c
+
+
+Tue Feb 23 12:48:24 CST 2016
+- [+] kernel/resource.c
+- [M] arch/x86/kernel/setup.c
